[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Hearts.gd" type="Script" id=1]
[ext_resource path="res://Subscenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Subscenes/ParticleSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/background.png" type="Texture" id=4]
[ext_resource path="res://Subscenes/Reactor.tscn" type="PackedScene" id=5]
[ext_resource path="res://Subscenes/RestartButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=7]
[ext_resource path="res://Fonts/MontrealLarge.tres" type="DynamicFont" id=8]
[ext_resource path="res://Subscenes/ChargerManager.tscn" type="PackedScene" id=10]
[ext_resource path="res://Subscenes/ScoreCounter.tscn" type="PackedScene" id=11]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 75.2194, 300 )

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 648.83, 81.3755 )

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="StyleBoxTexture" id=7]

[sub_resource type="StyleBoxTexture" id=8]

[node name="Main" type="Node2D"]
scale = Vector2( 1.11549, 1 )
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -0.531189
margin_right = 1800.0
margin_bottom = 1199.47
rect_scale = Vector2( 0.52, 0.52 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreCounter" parent="." instance=ExtResource( 11 )]
margin_left = 10.0
margin_top = 545.0
margin_right = 193.0
margin_bottom = 600.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
text = "Score: 100
High: 200"

[node name="ChargerManager" parent="." instance=ExtResource( 10 )]

[node name="Reactor" parent="." instance=ExtResource( 5 )]
position = Vector2( 477.649, 298.334 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 246.908, 324.02 )

[node name="ParticleSpawner" parent="." groups=[
"BouncyParticles",
] instance=ExtResource( 3 )]
scale = Vector2( 0.9718, 1 )
numToSpawn = 1
spawnVelocityMagnitude = 200

[node name="Walls" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Wall Right" type="StaticBody2D" parent="Walls"]
position = Vector2( 1024, 300 )
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall Right"]
position = Vector2( -26.6772, 6.93583 )
shape = SubResource( 2 )

[node name="Wall Left" type="StaticBody2D" parent="Walls"]
position = Vector2( 0, 300 )
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall Left"]
position = Vector2( -75.6034, 3.59281 )
shape = SubResource( 2 )

[node name="Wall Bottom" type="StaticBody2D" parent="Walls"]
position = Vector2( 512, 600 )
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall Bottom"]
position = Vector2( -5.64743, 66.7758 )
shape = SubResource( 4 )

[node name="Wall Top" type="StaticBody2D" parent="Walls"]
position = Vector2( 512, 0 )
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall Top"]
position = Vector2( 1.42303, -49.2094 )
shape = SubResource( 4 )

[node name="Hearts" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Button" parent="CanvasLayer" instance=ExtResource( 6 )]
margin_left = 304.204
margin_top = 54.6517
margin_right = 704.204
margin_bottom = 156.652
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.384314, 0.384314, 0.384314, 1 )
text = "Restart"

[connection signal="player_died" from="Player" to="CanvasLayer/Button" method="_on_Player_player_died"]
[connection signal="player_hit" from="Player" to="Hearts" method="_on_Player_player_hit"]
[connection signal="particle_fully_decayed" from="ParticleSpawner" to="." method="_on_ParticleSpawner_particle_fully_decayed"]
[connection signal="button_up" from="CanvasLayer/Button" to="." method="_on_Button_button_up"]
